--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </a>
           </li>
         </ul>
-        <button type="button" class="burger" data-menu-open>
+        <button class="burger" data-menu-open type="button">
           <svg class="burger__icon">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
@@ -119,15 +119,17 @@
         </div>
       </div>
     </header>
-    <!-- <main>
+    <main>
       <section class="hero-section">
         <div class="hero-container container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="header-btn" data-modal-open type="button">Заказать услугу</button>
+          <button class="header-btn" data-modal-open type="button">
+            Заказать услугу
+          </button>
         </div>
       </section>
     </main>
-    <section class="section">
+     <section class="section">
       <div class="container">
         <h2 class="title">Особенности</h2>
         <ul class="feature-list">
@@ -182,7 +184,7 @@
         </ul>
       </div>
     </section>
-    <section class="section box-section">
+   <!-- <section class="section box-section">
       <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="box-list">
