--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
       </section>
     </main>
-     <section class="section">
+    <section class="section">
       <div class="container">
         <h2 class="title">Особенности</h2>
         <ul class="feature-list">
@@ -184,41 +184,61 @@
         </ul>
       </div>
     </section>
-   <!-- <section class="section box-section">
+    <section class="section business section--other-padding">
       <div class="container">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="box-list">
-          <li class="box-item">
-            <img
-              src="./images/img1.jpg"
-              alt="Планшет с клавиатурой"
-              width="370"
-              height="294"
-            />
-            <p class="box-text">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
+        <h2 class="section__title">Чем мы занимаемся</h2>
+        <ul class="business-list">
+          <li class="business-list__item">
+            <div class="business-list__work">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/business/business-1.jpg    1x,
+                    ./images/business/business-1@2x.jpg 2x
+                  "
+                />
+                <img class="business-list__img" src="#" alt="разработка" />
+              </picture>
+              <p class="business-list__text">Десктопные приложения</p>
+            </div>
           </li>
-          <li class="box-item">
-            <img
-              src="./images/img2.jpg"
-              alt="Мобильные телефоны на экране ноутбука"
-              width="370"
-              height="294"
-            />
-            <p class="box-text">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+          <li class="business-list__item">
+            <div class="business-list__work">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/business/business-2.jpg    1x,
+                    ./images/business/business-2@2x.jpg 2x
+                  "
+                />
+                <img class="business-list__img" src="#" alt="дизайн" />
+              </picture>
+              <p class="business-list__text">Мобильные приложения</p>
+            </div>
           </li>
-          <li class="box-item">
-            <img
-              src="./images/img3.jpg"
-              alt="Палитра цветов на экране планшета"
-              width="370"
-              height="294"
-            />
-            <p class="box-text">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+          <li class="business-list__item">
+            <div class="business-list__work">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/business/business-3.jpg    1x,
+                    ./images/business/business-3@2x.jpg 2x
+                  "
+                />
+                <img class="business-list__img" src="#" alt="дизайн" />
+              </picture>
+
+              <p class="business-list__text">Дизайнерские решения</p>
+            </div>
           </li>
         </ul>
       </div>
     </section>
-    <section class="section-bg">
+
+    <!--<section class="section-bg">
       <div class="container">
         <h2 class="section-title team-title">Наша Команда</h2>
         <ul class="team-list">
@@ -534,6 +554,7 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html> -->
   </body>
