--- a/index.html
+++ b/index.html
@@ -237,8 +237,7 @@
         </ul>
       </div>
     </section>
-
-    <!--<section class="section-bg">
+    <section class="section-bg">
       <div class="container">
         <h2 class="section-title team-title">Наша Команда</h2>
         <ul class="team-list">
