--- a/index.html
+++ b/index.html
@@ -242,7 +242,50 @@
         <h2 class="section-title team-title">Наша Команда</h2>
         <ul class="team-list">
           <li class="team-item">
-            <img src="./images/Игорь.jpg" alt="Фото Игоря" width="270" />
+             <picture >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member1-1200@1x.webp 1x,
+                        ./images/team/team_member1-1200@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member1-1200@1x.jpg 1x,
+                        ./images/team/team_member1-1200@2x.jpg 2x"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="./images/team/team_member1-768@1x.webp 1x,
+                        ./images/team/team_member1-768@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="
+                         ./images/team/team_member1-768@1x.jpg 1x,
+                        ./images/team/team_member1-768@2x.jpg 2x"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member1-480@1x.webp 1x,
+                        ./images/team/team_member1-480@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member1-480@1x.jpg 1x,
+                        ./images/team/team_member1-480@2x.jpg 2x"
+                        >
+                        <img
+                        src="#"
+                        alt="фото Игорь Демьяненко"
+                        />
+                    </picture>
             <div class="team-card">
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p lang="en" class="team-card-text">Product Designer</p>
@@ -279,7 +322,50 @@
             </div>
           </li>
           <li class="team-item">
-            <img src="./images/Ольга.jpg" alt="Фото Ольги" width="270" />
+             <picture >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member2-1200@1x.webp 1x,
+                        ./images/team/team_member2-1200@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member2-1200@1x.jpg 1x,
+                        ./images/team/team_member2-1200@2x.jpg 2x"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="./images/team/team_member2-768@1x.webp 1x,
+                        ./images/team/team_member2-768@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="
+                         ./images/team/team_member2-768@1x.jpg 1x,
+                        ./images/team/team_member2-768@2x.jpg 2x"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member2-480@1x.webp 1x,
+                        ./images/team/team_member2-480@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member2-480@1x.jpg 1x,
+                        ./images/team/team_member2-480@2x.jpg 2x"
+                        >
+                        <img
+                        src="#"
+                        alt="фото Олга Репина"
+                        />
+                    </picture>
             <div class="team-card">
               <h3 class="team-name">Ольга Репина</h3>
               <p lang="en" class="team-card-text">Frontend Developer</p>
@@ -316,7 +402,50 @@
             </div>
           </li>
           <li class="team-item">
-            <img src="./images/Николай.jpg" alt="Фото Николая" width="270" />
+            <picture >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member3-1200@1x.webp 1x,
+                        ./images/team/team_member3-1200@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member3-1200@1x.jpg 1x,
+                        ./images/team/team_member3-1200@2x.jpg 2x"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="./images/team/team_member3-768@1x.webp 1x,
+                        ./images/team/team_member3-768@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="
+                         ./images/team/team_member3-768@1x.jpg 1x,
+                        ./images/team/team_member3-768@2x.jpg 2x"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member3-480@1x.webp 1x,
+                        ./images/team/team_member3-480@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member3-480@1x.jpg 1x,
+                        ./images/team/team_member3-480@2x.jpg 2x"
+                        >
+                        <img
+                        src="#"
+                        alt="фото Николай Тарасов"
+                        />
+                    </picture>
             <div class="team-card">
               <h3 class="team-name">Николай Тарасов</h3>
               <p lang="en" class="team-card-text">Marketing</p>
@@ -353,7 +482,50 @@
             </div>
           </li>
           <li class="team-item">
-            <img src="./images/Михаил.jpg" alt="Фото Михаила" width="270" />
+            <picture >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member4-1200@1x.webp 1x,
+                        ./images/team/team_member4-1200@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 1200px)"
+                        srcset="
+                        ./images/team/team_member4-1200@1x.jpg 1x,
+                        ./images/team/team_member4-1200@2x.jpg 2x"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="./images/team/team_member4-768@1x.webp 1x,
+                        ./images/team/team_member4-768@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(min-width: 768px)"
+                        srcset="
+                         ./images/team/team_member4-768@1x.jpg 1x,
+                        ./images/team/team_member4-768@2x.jpg 2x"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member4-480@1x.webp 1x,
+                        ./images/team/team_member4-480@2x.webp 2x"
+                        type="image/webp"
+                        >
+                        <source
+                        media="(max-width: 767px)"
+                        srcset="
+                        ./images/team/team_member4-480@1x.jpg 1x,
+                        ./images/team/team_member4-480@2x.jpg 2x"
+                        >
+                        <img
+                        src="#"
+                        alt="фото Михаил Ермаков"
+                        />
+                    </picture>
             <div class="team-card">
               <h3 class="team-name">Михаил Ермаков</h3>
               <p lang="en" class="team-card-text">UI Designer</p>
