--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </ul>
       </div>
     </section>
-    <section class="section-bg">
+    <section class="section">
       <div class="container">
         <h2 class="section-title team-title">Наша Команда</h2>
         <ul class="team-list">
@@ -570,42 +570,42 @@
         <ul class="client-list">
           <li class="client-item">
             <a href="#" class="client-box">
-              <svg class="client-icon" width="170" height="92">
+              <svg class="client-icon">
                 <use href="./images/icons.svg#icon-logo1"></use>
               </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="#"  class="client-box">
-              <svg class="client-icon"  width="170" height="92" >
+              <svg class="client-icon"  >
                 <use href="./images/icons.svg#icon-logo4"></use>
               </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="#" class="client-box">
-              <svg class="client-icon"  width="170" height="92">
+              <svg class="client-icon" >
                 <use href="./images/icons.svg#icon-logo3"></use>
               </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="#"  class="client-box">
-              <svg class="client-icon"  width="170" height="92" >
+              <svg class="client-icon"  >
                 <use href="./images/icons.svg#icon-logo2"></use>
               </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="#"  class="client-box">
-              <svg class="client-icon"  width="170" height="92" >
+              <svg class="client-icon"  >
                 <use href="./images/icons.svg#icon-logo5"></use>
               </svg>
             </a>
           </li>
           <li class="client-item">
             <a href="#"  class="client-box">
-              <svg class="client-icon" width="170" height="92" >
+              <svg class="client-icon" >
                 <use href="./images/icons.svg#icon-Logo6"></use>
               </svg>
             </a>
@@ -727,6 +727,6 @@
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
   </body>
-</html> -->
+</html> 
   </body>
 </html>
