--- a/index.html
+++ b/index.html
@@ -566,46 +566,46 @@
     </section>
     <section class="section">
       <div class="container">
-        <h2 class="section-title client-title">Постоянные клиенты</h2>
-        <ul class="client-list">
-          <li class="client-item">
-            <a href="#" class="client-box">
-              <svg class="client-icon">
+        <h2 class="section-title clients-title">Постоянные клиенты</h2>
+        <ul class="clients-list">
+          <li class="clients-list__item">
+            <a href="#" class="clients-list__link">
+              <svg class="clients-list__icon">
                 <use href="./images/icons.svg#icon-logo1"></use>
               </svg>
             </a>
           </li>
-          <li class="client-item">
-            <a href="#"  class="client-box">
-              <svg class="client-icon"  >
+          <li class="clients-list__item">
+            <a href="#" class="clients-list__link">
+              <svg class="clients-list__icon">
                 <use href="./images/icons.svg#icon-logo4"></use>
               </svg>
             </a>
           </li>
-          <li class="client-item">
-            <a href="#" class="client-box">
-              <svg class="client-icon" >
+           <li class="clients-list__item">
+            <a href="#" class="clients-list__link">
+              <svg class="clients-list__icon">
                 <use href="./images/icons.svg#icon-logo3"></use>
               </svg>
             </a>
           </li>
-          <li class="client-item">
-            <a href="#"  class="client-box">
-              <svg class="client-icon"  >
+          <li class="clients-list__item">
+            <a href="#" class="clients-list__link">
+              <svg class="clients-list__icon">
                 <use href="./images/icons.svg#icon-logo2"></use>
               </svg>
             </a>
           </li>
-          <li class="client-item">
-            <a href="#"  class="client-box">
-              <svg class="client-icon"  >
+          <li class="clients-list__item">
+            <a href="#"  class="clients-list__link">
+              <svg class="clients-list__icon"  >
                 <use href="./images/icons.svg#icon-logo5"></use>
               </svg>
             </a>
           </li>
-          <li class="client-item">
-            <a href="#"  class="client-box">
-              <svg class="client-icon" >
+          <li class="clients-list__item">
+            <a href="#"  class="clients-list__link">
+              <svg class="clients-list__icon" >
                 <use href="./images/icons.svg#icon-Logo6"></use>
               </svg>
             </a>
@@ -614,9 +614,9 @@
       </div>
     </section>
     <footer class="footer">
-      <div class="footer-container container">
+      <div class="footer__container container">
         <div class="footer-left">
-        <a class="footer-logo" href="index.html" lang="en"
+        <a class="logo--footer" href="index.html" lang="en"
           ><span class="web">Web</span>Studio</a>
         <address>
           <ul class="contacts">
