--- a/index.html
+++ b/index.html
@@ -237,11 +237,11 @@
         </ul>
       </div>
     </section>
-    <section class="section">
+    <section class="section seclion--background">
       <div class="container">
-        <h2 class="section-title team-title">Наша Команда</h2>
+        <h2 class="section__title team-title">Наша Команда</h2>
         <ul class="team-list">
-          <li class="team-item">
+          <li class="team-list__item">
              <picture >
                         <source
                         media="(min-width: 1200px)"
@@ -286,34 +286,34 @@
                         alt="фото Игорь Демьяненко"
                         />
                     </picture>
-            <div class="team-card">
-              <h3 class="team-name">Игорь Демьяненко</h3>
-              <p lang="en" class="team-card-text">Product Designer</p>
-              <ul class="team-social social-list">
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+            <div class="team-list__info">
+              <h3 class="team-list__name">Игорь Демьяненко</h3>
+              <p lang="en" class="team-list__text">Product Designer</p>
+              <ul class="team-social team-list-social">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -321,7 +321,7 @@
               </ul>
             </div>
           </li>
-          <li class="team-item">
+          <li class="team-list__item">
              <picture >
                         <source
                         media="(min-width: 1200px)"
@@ -366,34 +366,34 @@
                         alt="фото Олга Репина"
                         />
                     </picture>
-            <div class="team-card">
-              <h3 class="team-name">Ольга Репина</h3>
-              <p lang="en" class="team-card-text">Frontend Developer</p>
-              <ul class="team-social social-list">
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+            <div class="team-list__info">
+              <h3 class="team-list__name">Ольга Репина</h3>
+              <p lang="en" class="team-list__text">Frontend Developer</p>
+              <ul class="team-social team-list-social">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -401,7 +401,7 @@
               </ul>
             </div>
           </li>
-          <li class="team-item">
+          <li class="team-list__item">
             <picture >
                         <source
                         media="(min-width: 1200px)"
@@ -446,34 +446,34 @@
                         alt="фото Николай Тарасов"
                         />
                     </picture>
-            <div class="team-card">
-              <h3 class="team-name">Николай Тарасов</h3>
-              <p lang="en" class="team-card-text">Marketing</p>
-              <ul class="team-social social-list">
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+            <div class="team-list__info">
+              <h3 class="team-list__name">Николай Тарасов</h3>
+              <p lang="en" class="team-list__text">Marketing</p>
+              <ul class="team-social team-list-social">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -481,7 +481,7 @@
               </ul>
             </div>
           </li>
-          <li class="team-item">
+          <li class="team-list__item">
             <picture >
                         <source
                         media="(min-width: 1200px)"
@@ -526,34 +526,34 @@
                         alt="фото Михаил Ермаков"
                         />
                     </picture>
-            <div class="team-card">
-              <h3 class="team-name">Михаил Ермаков</h3>
-              <p lang="en" class="team-card-text">UI Designer</p>
-              <ul class="team-social social-list">
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+            <div class="team-list__info">
+              <h3 class="team-list__name">Михаил Ермаков</h3>
+              <p lang="en" class="team-list__text">UI Designer</p>
+              <ul class="team-social team-list-social">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="social-item">
-                  <a href="#" class="social-link">
-                    <svg class="team-icon" width="20" height="20">
+                <li class="team-social__list">
+                  <a href="#" class="team-social__link">
+                    <svg class="team-social__icon" width="20" height="20">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -566,7 +566,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <h2 class="section-title clients-title">Постоянные клиенты</h2>
+        <h2 class="section__title clients-title">Постоянные клиенты</h2>
         <ul class="clients-list">
           <li class="clients-list__item">
             <a href="#" class="clients-list__link">
@@ -680,42 +680,42 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <form class="modal-form">
-          <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
-          <label class="form-label">Имя
-          <span class="input-image">
-          <input class="form-input" type="text" name="name" autofocus >
-             <svg class="input-icon"  width="18" height="18">
+          <b class="modal-form__title">Оставьте свои данные, мы вам перезвоним</b>
+          <label class="modal-form__label">Имя
+          <span class="modal-form__image">
+          <input class="modal-form__input" type="text" name="name" autofocus >
+             <svg class="modal-form__icon"  width="18" height="18">
                <use href="./images/icons.svg#icon-person-black"></use>
               </svg>
           </span>
         </label>
-          <label class="form-label" for="tel">Телефон
-          <span class="input-image">
-          <input  class="form-input" type="tel" name="tel" id="tel"/>
-            <svg class="input-icon"  width="18" height="18">
+          <label class="modal-form__label" for="tel">Телефон
+          <span class="modal-form__image">
+          <input  class="modal-form__input" type="tel" name="tel" id="tel"/>
+            <svg class="modal-form__icon"  width="18" height="18">
               <use href="./images/icons.svg#icon-phone-black"></use>
              </svg>
           </span>
         </label>
-          <label class="form-label">Почта
-          <span class="input-image">
-          <input  class="form-input" type="email"  name="email" /> 
-            <svg class="input-icon"  width="18" height="18">
+          <label class="modal-form__label">Почта
+          <span class="modal-form__image">
+          <input  class="modal-form__input" type="email"  name="email" /> 
+            <svg class="modal-form__icon"  width="18" height="18">
               <use href="./images/icons.svg#icon-email-black"></use>
              </svg>
           </span>
         </label>
-          <label class="form-label form-comment" for="comment">Коментарий
+          <label class="modal-form__label form-comment" for="comment">Коментарий
           <textarea class="input-comment comment" name="comment"  id="comment" placeholder="Введите текст"></textarea>
         </label>
           <div class="form-policy">
-            <input class="madal-checkbox visually-hidden" type="checkbox" name="policy" id="checkbox-agr" />
-            <label for="checkbox-agr" class="madal-checkbox-label">
+            <input class="madal-form__checkbox visually-hidden" type="checkbox" name="policy" id="checkbox-agr" />
+            <label for="checkbox-agr" class="madal-form-check">
           Соглашаюсь с рассылкой и принимаю&nbsp;
-          <a class="agreement" href="#">  Условия договора</a>
+          <a class="modal-form__link" href="#">  Условия договора</a>
         </label>
           </div>
-          <button class="contact-form-btn" type="submit">Отправить</button>
+          <button class="modal-form__button" type="submit">Отправить</button>
         </form>
         <button type="button" class="modal-btn" data-modal-close>
         <svg class="modal-icon" width="18" height="18">
