--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container container">
+      <div class="container">
+         <nav class="main-nav">
         <a class="logo" href="index.html" lang="en">
           <span class="web">Web</span><span class="studio">Studio</span></a
         >
-        <nav class="main-nav">
-          <ul class="site-nav">
+        
+          <ul class="site-nav site-nav--margin">
             <li class="site-nav__item">
               <a href="./index.html" class="site-nav__link--current">Студия</a>
             </li>
@@ -706,15 +707,13 @@
           </span>
         </label>
           <label class="modal-form__label form-comment" for="comment">Коментарий
-          <textarea class="input-comment comment" name="comment"  id="comment" placeholder="Введите текст"></textarea>
+          <textarea class="modal-form__comment" name="comment"  id="comment" placeholder="Введите текст"></textarea>
         </label>
-          <div class="form-policy">
             <input class="madal-form__checkbox visually-hidden" type="checkbox" name="policy" id="checkbox-agr" />
-            <label for="checkbox-agr" class="madal-form-check">
+            <label class="modal-form__check" for="checkbox-agr">
           Соглашаюсь с рассылкой и принимаю&nbsp;
           <a class="modal-form__link" href="#">  Условия договора</a>
         </label>
-          </div>
           <button class="modal-form__button" type="submit">Отправить</button>
         </form>
         <button type="button" class="modal-btn" data-modal-close>
