--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
             </ul>
           </address>
           </div>
-          <div class="footer-right">
+          <div class="right footer-right">
             <p class="footer-right__title">ПРИСОЕДИНЯЙТЕСЬ</p>
           <ul class="footer-social">
             <li class="footer-social__list">
@@ -709,7 +709,7 @@
           <label class="modal-form__label form-comment" for="comment">Коментарий
           <textarea class="modal-form__comment" name="comment"  id="comment" placeholder="Введите текст"></textarea>
         </label>
-            <input class="madal-form__checkbox visually-hidden" type="checkbox" name="policy" id="checkbox-agr" />
+            <input class="modal-form__checkbox visually-hidden" type="checkbox" name="policy" id="checkbox-agr" />
             <label class="modal-form__check" for="checkbox-agr">
           Соглашаюсь с рассылкой и принимаю&nbsp;
           <a class="modal-form__link" href="#">  Условия договора</a>
