--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,7 @@
            <div class="container">
                 <h1 class="section__title visually-hidden">Примеры работ</h1>
                 <ul class="filter">
-                    <li class="filter__item"><button class="filter__button" type="button">Все</button></li>
+                    <li class="filter__item"><button class="filter__button btn-active" type="button">Все</button></li>
                     <li class="filter__item"><button class="filter__button" type="button">Веб-сайты</button></li>
                     <li class="filter__item"><button class="filter__button" type="button">Приложения</button></li>
                     <li class="filter__item"><button class="filter__button" type="button">Дизайн</button></li>
@@ -692,7 +692,7 @@
             </ul>
           </address>
           </div>
-          <div class="footer-right">
+          <div class="right footer-right">
             <p class="footer-right__title">ПРИСОЕДИНЯЙТЕСЬ</p>
           <ul class="footer-social">
             <li class="footer-social__list">
