--- a/index.html
+++ b/index.html
@@ -751,12 +751,12 @@
             ></textarea>
           </label>
           <input
-            class="modal-form__checkbox visually-hidden"
+            class="modal-form__box visually-hidden"
             type="checkbox"
             name="policy"
             id="checkbox-agr"
           />
-          <label class="modal-form__check" for="checkbox-agr">
+          <label class="modal-form__check modal-form__checkbox" for="checkbox-agr">
             Соглашаюсь с рассылкой и принимаю&nbsp;
             <a class="modal-form__link" href="#"> Условия договора</a>
           </label>
