--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
             id="checkbox-agr"
           />
           <label
-            class="modal-form__check modal-form__checkbox"
+            class="modal-form__checkbox"
             for="checkbox-agr"
           >
             Соглашаюсь с рассылкой и принимаю&nbsp;
